--- a/style.css
+++ b/style.css
@@ -22,6 +22,33 @@ h1 {
   font-size: 22pt;
 }
 
-main {
-margin:30%;
+nav {
+margin-top:100px;
+background:#fff2f4;
+position: absolute;
+height:50px;
+left: 0;
+right: 0;
+top: 0;
+border: 4px solid #ffe5ea;
+}
+
+.nav_btn {
+  background:#fff2f4;
+  height:50px;
+  border: none;
+  color: black;
+  padding: 12px 16px;
+  margin-left:10px;
+  margin-right:10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.nav_btn:hover {
+  background-color: #ffe5ea;
+}
+
+i {
+margin-right:5px;
 }
