--- a/style.css
+++ b/style.css
@@ -1,54 +1,74 @@
 /* STYLE SHEET */
 
-header {
-background: linear-gradient(to left,#fc2b2b, #fc3de9, cyan, #93fc3d, #fcf63d);
-position: absolute;
-height:100px;
-left: 0;
-right: 0;
-top: 0;
+body {
+width:100%;
+height:100%;
+margin:0;
+padding: 0;
+}
 
+.logo {
+position: absolute;
+width:60px;
+height:60px;
+left:30px;
+top:20px;
+}
+
+.header {
+background: linear-gradient(to left,#fc2b2b, #fc3de9, cyan, #93fc3d, #fcf63d);
+position: relative;
+height:100px;
 display: flex;
 justify-content: center;
 align-items: center;
 }
 
 .headerTitle {
-color:white;
+color:black;
+font-family: Marker Felt, fantasy;
+font-size: 22pt;
 }
 
-h1 {
-  font-family: Marker Felt, fantasy;
-  font-size: 22pt;
-}
-
-nav {
-margin-top:100px;
+.nav {
 background:#fff2f4;
-position: absolute;
+position: relative;
 height:50px;
-left: 0;
-right: 0;
-top: 0;
 border: 4px solid #ffe5ea;
 }
 
 .nav_btn {
-  background:#fff2f4;
-  height:50px;
-  border: none;
-  color: black;
-  padding: 12px 16px;
-  margin-left:10px;
-  margin-right:10px;
-  font-size: 16px;
-  cursor: pointer;
+background:#fff2f4;
+height:50px;
+border: none;
+color: black;
+padding: 12px 16px;
+margin-left:10px;
+margin-right:10px;
+font-size: 16px;
+cursor: pointer;
 }
 
 .nav_btn:hover {
-  background-color: #ffe5ea;
+background-color: #ffe5ea;
 }
 
 i {
 margin-right:5px;
+}
+
+.main {
+background: url('images/background.png') no-repeat center;
+width: 100%;
+height: 100%;
+margin: 0;
+padding-bottom: 100%;
+}
+
+.footer {
+position:relative;
+width:100%;
+height:200px;
+background: linear-gradient(to left,#fc2b2b, #fc3de9, cyan, #93fc3d, #fcf63d);
+border-top: 4px solid #ffe5ea;
 }
