--- a/style.css
+++ b/style.css
@@ -30,45 +30,39 @@ font-family: Marker Felt, fantasy;
 font-size: 22pt;
 }
 
-.nav {
-background:#fff2f4;
-position: relative;
-height:50px;
-border: 4px solid #ffe5ea;
-}
-
-.nav_btn {
-background:#fff2f4;
-height:50px;
-border: none;
-color: black;
-padding: 12px 16px;
-margin-left:10px;
-margin-right:10px;
-font-size: 16px;
-cursor: pointer;
-}
-
-.nav_btn:hover {
-background-color: #ffe5ea;
-}
-
 i {
 margin-right:5px;
 }
 
 .main {
-background: url('images/background.png') no-repeat center;
 width: 100%;
 height: 100%;
 margin: 0;
 padding-bottom: 100%;
 }
 
-.footer {
-position:relative;
-width:100%;
-height:200px;
-background: linear-gradient(to left,#fc2b2b, #fc3de9, cyan, #93fc3d, #fcf63d);
-border-top: 4px solid #ffe5ea;
+.ad {
+background:#fff2f4;
+position: relative;
+height:100px;
+border-top: 2px solid black;
+border-bottom: 2px solid black;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.products {
+width:100%
+}
+
+.product {
+float:left;
+background:#fff2f4;
+width: 30%;
+padding: 12px 20px;
+margin: 10px;
+border: 2px solid black;
+border-radius: 20px;
+box-sizing: border-box;
 }
